// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AmountField renders TextField with default props 1`] = `
<TextField
  label="Amount"
  name="unique-field-id-amount"
  onChange={[Function]}
  required={false}
  select={false}
  value={0}
  variant="standard"
/>
`;

exports[`AmountField renders TextField with overridden defaults 1`] = `
<TextField
  label="Amount"
  name="unique-field-id-amount"
  onChange={[Function]}
  required={true}
  select={false}
  value={1}
  variant="standard"
/>
`;
